src/objects/UHW_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Exit_Date__c</fullName>
        <description>When did the asset exit from UHW due to lost/stolen/recycled/donated date?</description>
        <label>Lost/Stolen/Recycled/Donated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <externalId>true</externalId>
        <label>Asset Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aircard/Hotspot</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Cell Phone</fullName>
                </value>
                <value>
                    <fullName>Copier</fullName>
                </value>
                <value>
                    <fullName>DVD Player</fullName>
                </value>
                <value>
                    <fullName>DVD Writer</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
                <value>
                    <fullName>IT/Other</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Operations/Other</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Projector</fullName>
                </value>
                <value>
                    <fullName>Scanner</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Smartphone</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_Member_Employer__c</fullName>
        <formula>Assigned_to_Member__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Member Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned to Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UHW Assets</relationshipLabel>
        <relationshipName>UHW_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Name__c</fullName>
        <label>Computer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <defaultValue>&quot;SEIU-UHW&quot;</defaultValue>
        <label>Corporation</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>if(isblank(User__c),   
  if( ISPICKVAL(Assigned_to_Member__r.Account.Account_Group__c, &quot;KAISER&quot;), &quot;Kaiser&quot;,
    if( ISPICKVAL(Assigned_to_Member__r.Account.Account_Group__c, &quot;HOSPITAL&quot;), &quot;Hospital&quot;,
      if( ISPICKVAL(Assigned_to_Member__r.Account.Account_Group__c, &quot;HOSPITALS&quot;), &quot;Hospital&quot;, &quot;Unknown&quot;)
    )
  ),
User__r.Department)</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depreciated_Value__c</fullName>
        <formula>if(or(isblank( Purchase_Date__c ), isblank(  Purchase_Cost__c ),  ((TODAY() - Purchase_Date__c) / 365.25) &gt;Depreciation_Life__c), 0,
if( ISPICKVAL( Own_Lease__c , &quot;Own&quot;), ((Purchase_Cost__c -  Salvage_Value__c) * (1 - ((TODAY() - Purchase_Date__c) / 365.25) /  Depreciation_Life__c)) + Salvage_Value__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depreciation_Annual__c</fullName>
        <formula>if(or(isblank( Purchase_Date__c ), isblank( Purchase_Cost__c ), ((TODAY() - Purchase_Date__c) / 365.25) &gt;Depreciation_Life__c ), 0, 
if( ISPICKVAL( Own_Lease__c , &quot;Own&quot;), 
(Purchase_Cost__c - Salvage_Value__c) * (1 / Depreciation_Life__c),
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciation Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depreciation_Life__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Years over which to depreciate the asset.</description>
        <label>Depreciation Life</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_Add_Info__c</fullName>
        <description>additional info about disposition</description>
        <label>Disposition Add Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned to User</fullName>
                </value>
                <value>
                    <fullName>Assigned to Office Location (See Add Info)</fullName>
                </value>
                <value>
                    <fullName>Assigned to Member</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
                <value>
                    <fullName>Warranty Exchanged</fullName>
                </value>
                <value>
                    <fullName>Lease Returned</fullName>
                </value>
                <value>
                    <fullName>Other (See Disposition Add Info)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>User__r.SOS_Manager_Name__c</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Assigned__c</fullName>
        <label>Office Assigned</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_User__c</fullName>
        <description>Which office is the User based out of?</description>
        <formula>User__r.Location__c</formula>
        <label>User Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Lease__c</fullName>
        <label>Own/Lease?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Borrowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit_Expiration_Date__c</fullName>
        <label>Permit Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>If cell or hotspot, what is the phone number?</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provisioning_Team__c</fullName>
        <label>Provisioning Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Purchase Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Id__c</fullName>
        <label>Purchase Order Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Due_Date__c</fullName>
        <formula>UHW_Campaign__r.End_Date__c</formula>
        <label>Return Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salvage_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Salvage Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>See_Attachments_on_Other_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>See Attachments on Other Asset</description>
        <label>See Attachments on Other Asset</label>
        <referenceTo>UHW_Asset__c</referenceTo>
        <relationshipLabel>UHW Assets</relationshipLabel>
        <relationshipName>UHW_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UHW_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>UHW Campaign</label>
        <referenceTo>UHW_Campaign__c</referenceTo>
        <relationshipLabel>UHW Assets</relationshipLabel>
        <relationshipName>UHW_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Active__c</fullName>
        <formula>User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UHW_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>UHW Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>User__c</columns>
        <columns>Department__c</columns>
        <columns>Office_User__c</columns>
        <columns>Disposition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>UHW Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UHW Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>